7.x-1.13.x
----------
 - #1810 Stop throwing exception on tables with only numeric columns, to prevent preview breaking.
 - #1828 Field Frequency Harvest POD integration is missing support for "irregular" value.
 - #1820 Use "accessURL" during resources harvest if "downloadURL" field is not available.

7.x-1.13.3-RC1
--------------
 - #1829 Fixed missing properties on warning message during datajson harvest cache.
 - #1802 Better support for Issued and Updated dataset properties from harvested sources.
 - #1821 Remove redundant CSS load in dkan_dataset.
 - #1726 Fixed broken links in search results to nodes without aliases
 - #1792 Remove Windows reserved characters from default content filenames for better Windows support
 - #1815 Support importing Temporal Coverage during POD Harvest.
 - #1785 Fix error messages when installing DKAN with the UI.
 - #1786 Remove horizontal tab field from the group content type, fix margin on group block.
 - #1786 Add hook to auto-assign editors the og administrator role.
 - #1752 Added option for using quote delimiters when fast import is enabled for dkan datastore. Fixed error message when an import fails on DKAN Datastore Fast Import.
 - #1703 Refactor Datastore API module, fixing some caching issues and improving joins
 - #1804 Add project = dkan to dkan_sitewide.info to fix errors on update screen.
 - #1811 Apply patches to the rules module that can prevent unnecessary DB lockouts.

7.x-1.13.2 2017-03-16
----------------------
 - #1803 Fix broken access to featured groups sort order view.
 - #1796 Fix Harvest support for contact name and contact email.
 - #1795 Update front page test on topics.feature with @customizable.
 - #1783 Update services to 3.19
 - #1794 Update visualization_entity to 1.1
 - #1781 Update views to 3.15 and remove patch 1388684.
 - #1751 Add POD validation link to command center menu for site manager access.
 - #1762 Re-number update hooks that were mixed up during release integration.